--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta property="og:title" content="iMakeIt! - Platforma Edukacyjna dla Przedsiębiorców" />
     <meta property="og:description" content="Zaawansowana platforma łącząca zarządzanie projektami, śledzenie nawyków i edukację biznesową. Rozwijaj swój biznes online z ekspertami branży." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@imkeit_app" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@iMakeIt!" />
+    <meta name="twitter:image" content="" />
     
-    <link rel="canonical" href="https://lovable.dev/projects/cf494a84-6f75-4a5f-b53a-3ae7e0a5e95e" />
+    <link rel="canonical" href="" />
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
